syntax = "proto3";

option java_package = "com.parthhrana.mayhemlauncher.datastore.proto";
option java_multiple_files = true;

message UnlauncherApp {
  string package_name = 1;
  string class_name = 2;
  int64 user_serial = 3;
  string display_name = 4;
  bool display_in_drawer = 5;
  optional int32 home_app_index = 6;
}

message UnlauncherApps {
  repeated UnlauncherApp apps = 1;
  int32 version = 2;
}
